add forcing pass section

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -418,7 +418,7 @@ Shows an 11 trick hand missing two of the top three trump honours. Raise one lev
 		\begin{itemize}
 		\item Suit bids are natural
       \item 1NT rebid = 16--19 balanced; see ``Continuations after 1NT" \xref{sec:resp:1n}.
-      \item Jump suit rebids are GF, single-suited.
+      \item Jump suit rebids are almost-GF, semi-solid single-suited.
       \item 2NT rebid = 20--23 balanced; see ``Continuations after 2NT" \xref{sec:resp:2n}.
 		\end{itemize}
    \item 1$\spadesuit$ = 8+, game-forcing.
@@ -452,7 +452,7 @@ Shows an 11 trick hand missing two of the top three trump honours. Raise one lev
 				game is slam inviting asking opener to bid swiss for that suit. Other suits below 3NT are an enquiry
 				either wanting a stop or to find out openers' longer suit.
 			\end{itemize}
-      \item Jump suit rebids are GF, single-suited.
+      \item Jump suit rebids are almost-GF, semi-solid single-suited.
       \item 2NT rebid = 20--23 balanced; see ``Continuations after 2NT" \xref{sec:resp:2n}.
 		\end{itemize}
    \item 1N/2x = transfer weak jump shift 6+ card suit above, 0--7.
@@ -1626,6 +1626,19 @@ A few general principles here:
 	\item XX = no preference, strong
 	\item others = as normal
    \end{itemize}
+\end{itemize}
+
+\subsection{Forcing passes}
+\label{sec:forcepass}
+
+There are a number of situations where a pass can be forcing in the sense of
+``either we bid at least once more or defend doubled". The following situations
+are definitely forcing-pass situations:
+
+\begin{itemize}
+\item After a freely bid game
+\item After 1NT-X and they escape at the two level
+\item ...
 \end{itemize}
 
 \newpage
