--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -1100,6 +1100,11 @@ ace or a void in that suit. Unless otherwise agreed to be something else the
 bid of a suit a level above when it would be forcing for a round is a first round
 control showing cue agreeing the most recently shown suit.
 
+If a game-forcing auction has been established and if there are the following
+ways to agree a suit: bidding Swiss~\xref{sec:swiss}, bidding game and
+supporting below game, then the latter is a slam try which would prefer cue
+responses rather than swiss.
+
 \newpage
 
 \subsection{General Swiss}
@@ -1144,7 +1149,7 @@ outside singletons for kings, but care must be taken to avoid double-counting.
 
 While cueing kings/singletons, 4NT shows a singleton or king which can't be
 shown below 5 of the trump suit (usually diamonds over clubs) and asks partner
-to signoff appropriately whether they have duplication.
+to signoff appropriately depending on duplication.
 
 If you find duplication in kings/singletons subtract one CP and sign off at the
 appropriate level. If your partner signs off and you have 2 as-yet unshown CPs,
@@ -1153,7 +1158,9 @@ raise one level.
 If the hand bidding Swiss has shown a GF (opening a strong 2 level option,
 1$\diamondsuit$ and a jump rebid, or 1$\diamondsuit$ and a 2NT rebid), add 2 to
 all numbers. If it has shown a weak hand (opening a weak 2 or 3 level option or
-giving a 0--7 response to 1$\diamondsuit$ or opening 9-11 1NT), subtract 2 from all numbers.
+giving a 0--7 response to 1$\diamondsuit$ or opening 9-11 1NT), subtract 2 from
+all numbers. Direct swiss over a 3-level bid that may be weak or strong assumes
+weak for counting control points.
 
 There is a small problem if you have 7 CPs and are agreeing hearts, since in
 that case, there is no available next step. In this case you may wish to show
@@ -1588,6 +1595,38 @@ Responses:
 
 \item 1NT (majors)-(anything): double is for penalties, cue bid is a forcing enquiry
 
+\end{itemize}
+
+\subsubsection{Doubles of 1-major}
+\label{sec:intf:1M}
+
+\begin{itemize}
+\item 1$\heartsuit$-(X):
+	\begin{itemize}
+	\item Pass = dross
+	\item XX = 4 hearts and starts a penalty (but not forcing pass) auction
+		\begin{itemize}
+		\item Pass = 4 hearts
+		\item 1$\spadesuit$ = dross
+		\item 1N = 5$\spadesuit$ + 4 minor
+		\item 2$\clubsuit$ = 5$\spadesuit$ + 5$\clubsuit$
+		\item 2$\diamondsuit$ = 5$\spadesuit$ + 5$\diamondsuit$
+		\item 2$\spadesuit$ = 6+$\spadesuit$
+		\end{itemize}
+	\item 1$\spadesuit$ = to play
+	\item Other bids system on.
+	\end{itemize}
+\item 1$\spadesuit$-(X):
+	\begin{itemize}
+	\item Pass = dross
+	\item XX = 5 spades and starts a penalty (but not forcing pass) auction
+		\begin{itemize}
+		\item 1N = dross
+		\item 2$\clubsuit$ = 5$\heartsuit$ + 5$\clubsuit$
+		\item 2$\diamondsuit$ = 5$\heartsuit$ + 5$\diamondsuit$
+		\item 2$\heartsuit$ = 6+$\heartsuit$
+		\end{itemize}
+	\end{itemize}
 \end{itemize}
 
 \newpage
