--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -107,7 +107,7 @@ this may be bent with 4 small cards in a minor.
 
 \subsection{Hand evaluation}
 
-The descriptions below of particular bids will generally be in terms of point
+The descriptions below of particular bKingOfWrongids will generally be in terms of point
 ranges. These are not a hard and fast rule, however. We will try and make the
 bid which describes the hand best. This may mean small deviations of strength, 
 particularly with extra shape. No-trump ranges are the least likely to vary and
@@ -144,7 +144,9 @@ vulnerabilities.
 One of the following \orange{11C11}:
 
 \begin{itemize}
-\item (not 3\textsuperscript{rd} non-vul, events with 7+ boards/round) 12--15 balanced (4333, 4432, 5332). May occasionally include some semi-balanced hands esp. 5422.
+\item (not 3\textsuperscript{rd} non-vul (7+ boards/round) or 3\textsuperscript{rd}/4\textsuperscript{th} (1--6 boards/road)) 12--15 balanced (4333, 4432, 5332). May occasionally include some semi-balanced hands esp. 5422.
+\item (1\textsuperscript{st}/2\textsuperscript{nd} vul, 1--6 boards/round) 11--13 balanced (4333, 4432, 5332). May occasionally include some semi-balanced hands esp. 5422.
+
 \item 10--15, not balanced, no 5-card major and at most one 4-card major
 \end{itemize}
 
@@ -698,6 +700,8 @@ weak takeout.
 		\end{itemize}
 	\end{itemize}
 
+\newpage
+
 \subsubsection{Responses to higher opening bids}
 \label{sec:resp:higher}
 
@@ -720,8 +724,6 @@ weak takeout.
 		\end{itemize}
 	\item 4$\clubsuit$/$\diamondsuit$ = General Swiss~\xref{sec:swiss}
 	\end{itemize}
-
-\newpage
 
 \item 3$\spadesuit$:
 	\begin{itemize}
