--- a/defences.tex
+++ b/defences.tex
@@ -11,7 +11,7 @@ defences to our system, but there are probably several better ones.
 \item 1$\clubsuit$
 	One of the following:
 	\begin{itemize}
-	\item Your defence to a possibly short club
+	\item Your defence to a possibly short club or diamond
 	\item Your defence to a weak no-trump
 	\item Your defence to a natural club opening 
 	\item Your defence to a polish club
@@ -38,7 +38,7 @@ defences to our system, but there are probably several better ones.
 	\item Jump bids = normal jump-overcall range
 	\end{itemize}
 
-\item 1NT
+\item 1NT (Artificial)
 	\begin{itemize}
 	\item X = clubs and diamonds
 	\item 2$\clubsuit$/$\diamondsuit$ = natural overcall
