--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -107,7 +107,7 @@ this may be bent with 4 small cards in a minor.
 
 \subsection{Hand evaluation}
 
-The descriptions below of particular bKingOfWrongids will generally be in terms of point
+The descriptions below of particular bids will generally be in terms of point
 ranges. These are not a hard and fast rule, however. We will try and make the
 bid which describes the hand best. This may mean small deviations of strength, 
 particularly with extra shape. No-trump ranges are the least likely to vary and
@@ -161,23 +161,23 @@ balanced and promises 4 spades \orange{11C14}.
 
 First, second or third seat non-vulnerable (events with 7+ boards per round only):
 \begin{itemize}
-\item 4+ spades, may be longer hearts but will always have 5 spades or 4 hearts
+\item 4+ spades, may be longer hearts or a minor (possible canape), but will always have 5 spades or 4 hearts.
 \end{itemize}
 
 All other positions and vulnerabilities:
 \begin{itemize}
-\item 5+ spades, 0-3 hearts
+\item 5+ spades, 0-3 hearts, may contain a longer minor (possible canape).
 \end{itemize}
 
 \newpage
 
 \paragraph{1$\spadesuit$}
 
-10--15 points, not balanced. 5+ hearts, 0-3 spades \orange{11C14}
+10--15 points, not balanced. 5+ hearts, 0-3 spades \orange{11C14}, may have a longer minor (possible canape).
 
 \paragraph{1NT}
 
-Varies depending upon position, vulnerability and number of boards per round
+Varies depending upon position, vulnerability and number of boards per round \orange{10A8}
 
 First or second seat non-vulnerable:
 \begin{itemize}
@@ -403,9 +403,9 @@ Shows an 11 trick hand missing two of the top three trump honours. Raise one lev
       \item 1NT = 12--15 balanced; see ``Continuations after 1NT" \xref{sec:resp:1n}.
       \item minor suit bids deny a 4-card major.
 		\end{itemize}
-   \item 1N/2x = transfer weak jump shift 6+ card suit above, 0--9.
+   \item 1N/2x = transfer jump shift 6+ card suit above, 0--9 or slam try
 		\begin{itemize}
-		\item Complete the transfer with nothing more to say
+		\item Complete the transfer with nothing more to say opposite the weak option
 		\item 2N = extra values, nothing in the transfer suit
 		\item Jump-completion = good support, invitational
 		\item new suits = extras, tolerance, side suit
@@ -457,13 +457,13 @@ Shows an 11 trick hand missing two of the top three trump honours. Raise one lev
       \item Jump suit rebids are almost-GF, semi-solid single-suited.
       \item 2NT rebid = 20--23 balanced; see ``Continuations after 2NT" \xref{sec:resp:2n}.
 		\end{itemize}
-   \item 1N/2x = transfer weak jump shift 6+ card suit above, 0--7.
+   \item 1N/2x = transfer weak jump shift 6+ card suit above, 0--7 or slam try
 		\begin{itemize}
-		\item Complete the transfer with nothing more to say
+		\item Complete the transfer with nothing more to say opposite the weak option
 		\item 2N = extra values, nothing in the transfer suit
 		\item Jump-completion = good support, invitational
 		\item new suits = extras, tolerance, side suit
-		\item jump new suit = GF single suiter
+		\item jump new suit = nearly-GF single suiter
 		\end{itemize}
 	\end{itemize}
 
@@ -581,6 +581,10 @@ weak takeout.
    \item 2$\diamondsuit$ = pass/correct.
 		\begin{itemize}
       \item 2NT = GF opening.
+      \item 2$\heartsuit$ = weak majors.
+			\begin{itemize}
+			\item 2$\spadesuit$/3$\clubsuit$/3$\diamondsuit$ = to play
+			\end{itemize}
 		\end{itemize}
    \item 2$\heartsuit$/$\spadesuit$ = non-forcing; major-focused.
 		\begin{itemize}
@@ -615,6 +619,10 @@ weak takeout.
    \item 2$\heartsuit$ = pass/correct.
 		\begin{itemize}
       \item 2NT = GF opening.
+      \item 2$\spadesuit$ = weak blacks.
+			\begin{itemize}
+			\item 3$\clubsuit$/3$\diamondsuit$/3$\heartsuit$ = to play
+			\end{itemize}
 		\end{itemize}
    \item 2$\spadesuit$/3$\clubsuit$ = non-forcing, $\clubsuit$/$\spadesuit$-focused.
 		\begin{itemize}
@@ -643,6 +651,10 @@ weak takeout.
    \item 2$\spadesuit$ = pass/correct.
 		\begin{itemize}
       \item 2NT = GF opening.
+      \item 3$\clubsuit$ = weak minors.
+			\begin{itemize}
+			\item 3$\diamondsuit$/3$\heartsuit$/$\spadesuit$ = to play
+			\end{itemize}
 		\end{itemize}
    \item 3$\clubsuit$/3$\diamondsuit$ = non-forcing, $\clubsuit$/$\diamondsuit$-focused.
 		\begin{itemize}
@@ -668,7 +680,7 @@ weak takeout.
 
 \item 2$\spadesuit$:
 	\begin{itemize}
-   \item 2NT = Enquiry
+   \item 2NT = Enquiry (strong or to play in hearts opposite clubs and hearts)
 		\begin{itemize}
       \item 3$\clubsuit$ = weak with clubs
       \item 3$\diamondsuit$ = weak with $\heartsuit$\&$\diamondsuit$
@@ -803,6 +815,17 @@ After 2$\clubsuit$ is doubled:
 	\item 2$\heartsuit$/$\spadesuit$ = 5 card suit
 	\end{itemize}
 
+After 2$\clubsuit$ is overcalled by 2$\diamondsuit$:
+	
+	\begin{itemize}
+	\item Pass = no 5 card major
+		\begin{itemize}
+		\item 2$\heartsuit$ = 4 spades, possibly hearts
+		\item 2$\spadesuit$ = 4 hearts, denies spades
+		\end{itemize}
+	\item 2$\heartsuit$/$\spadesuit$ = 5 card suit
+	\end{itemize}
+
 \item 2$\diamondsuit$ and 2$\heartsuit$ are transfers; transfer breaks apply with any 4-card fit.  2NT
 shows 4/5-card support, no side 4-card suit, and a maximum.  Other suits
 show 4 cards, and 4-card support with a maximum.  A simple jump acceptance
@@ -817,10 +840,10 @@ After the transfer is doubled:
 	\item Normal transfer breaks = 4+ cards in support
 	\end{itemize}
 
-\item 2$\spadesuit$ is a range enquiry/transfer to $\clubsuit$.  2NT shows a
-minimum, after which 3$\clubsuit$ is to play and other bids are GF, first round
-cues.  3$\clubsuit$ shows any maximum, and can be passed if 2$\spadesuit$ was
-weak takeout.
+\item 2$\spadesuit$ is a range enquiry or invitational+ transfer to
+$\clubsuit$.  2NT shows a minimum, after which 3$\clubsuit$ shows invitational
+with only clubs and other bids are GF, clubs and another.  3$\clubsuit$ shows
+any maximum, and can be passed if 2$\spadesuit$ showed clubs.
 
 \item 2NT is a transfer to diamonds; 3$\clubsuit$ is the only available super-accept which 
 should be used with any 4 or honour-third.
@@ -831,6 +854,14 @@ pass, or bid 3NT with (e.g.) Kxx in the suit.
 \item 3$\diamondsuit$ is 5--5 in the majors, at least invitational.
 
 \item 3$\heartsuit$/3$\spadesuit$ are slam tries in clubs and diamonds.
+	\begin{itemize}
+	\item 3N = small doubleton
+		\begin{itemize}
+		\item 4N = quant (NT)
+		\item 4m = General Swiss \xref{sec:swiss} for the minor
+		\end{itemize}
+	\item 4m = General Swiss \xref{sec:swiss}
+	\end{itemize}
 
 \item 4$\clubsuit$/4$\diamondsuit$ are General Swiss \xref{sec:swiss}.
 
@@ -865,7 +896,6 @@ available. Either in a suit if one has been agreed or for no-trumps.
 		\item 3$\diamondsuit$ to play
 		\item other rebids are as after this sequence in 5 card puppet stayman.
 		\end{itemize}
-\newpage
 	\item 2$\diamondsuit$ with all other hands. 
 		\begin{itemize}
 		\item Pass if weak with diamonds
@@ -906,7 +936,7 @@ available. Either in a suit if one has been agreed or for no-trumps.
 \label{sec:resp:1nx}
 \label{note:20}
 
-We play a modified form of suction as the escape after 1NT-X.
+After a direct seat double we play a modified form of suction as the escape after 1NT-X:
 
 \begin{itemize}
 \item Pass forces XX, to play or weak with a two-suiter, not the reds or the majors
@@ -949,6 +979,10 @@ We play a modified form of suction as the escape after 1NT-X.
 This defence is played a level higher in the rare case of 2NT being doubled for
 penalties and applies in all cases that a natural notrump bid below game is doubled for
 penalties.
+
+After a protective double of 1NT we play Aardvark with a Halmic redouble where
+bids show a two suiter (that suit and a higher) and redouble forces 2C with a
+single-suiter.
 
 \subsubsection{After direct overcalls of 1NT}
 \label{sec:resp:lebensohl}
@@ -1208,7 +1242,7 @@ Direct 1NT is 15-17 balanced with a stop or semi-balanced and may contain a
 singleton ace~\orange{11N8}, protective 1NT is 11-14 with a stop.  After these
 ``Continuations after 1NT''~\xref{sec:resp:1n} apply, with the exception that
 after the auction (1x)-1N-(2y), 2x is stayman without a stop if available.
-Other bids are lebensohl.
+Other bids are lebensohl \label{sec:resp:lebensohl}.
 
 Jump overcalls are weak, showing a 6 card suit and between 4HCP (favourable)
 and enough to make a simple overcall. In protective they are intermediate
@@ -1388,8 +1422,13 @@ in hearts.
 \subsubsection{Natural 1NT}
 \label{sec:def:1n}
 
-Suction, constructive values. Double is for penalties and 2N shows a
-non-touching two suiter. \orange{11P7}
+Suction, constructive values. Double is for penalties, which may be based on 7
+top tricks, and 2N shows a non-touching two suiter. \orange{11P7}
+
+After a direct penalty double, passes are forcing until we've bid or doubled
+them.  Doubles are for penalties. In passout seat after they have escaped to
+the two level and partner has not bid then Lebensohl \label{sec:resp:lebensohl}
+is in effect, eg: (1N)-X-(2x)-P-(P)-2N
 
 \subsubsection{Artificial strong bids}
 \label{sec:def:strong}
@@ -1595,8 +1634,6 @@ Responses:
 	\item 3NT = to play, shows a stop
 	\end{itemize}
 
-\item 1NT (majors)-(anything): double is for penalties, cue bid is a forcing enquiry
-
 \end{itemize}
 
 \subsubsection{Doubles of 1-major}
@@ -1618,6 +1655,7 @@ Responses:
 	\item 1$\spadesuit$ = to play
 	\item Other bids system on.
 	\end{itemize}
+\newpage
 \item 1$\spadesuit$-(X):
 	\begin{itemize}
 	\item Pass = dross
@@ -1631,7 +1669,24 @@ Responses:
 	\end{itemize}
 \end{itemize}
 
-\newpage
+\subsection{Interference after an artificial 1NT}
+\label{sec:intf:1N}
+
+\begin{itemize}
+\item 1NT-(X):
+	\begin{itemize}
+	\item Pass = weak, no preference
+	\item XX = enquiry
+	\item 2x = to play
+	\end{itemize}
+\item 1NT-(bids)
+	\begin{itemize}
+	\item X = penalties
+	\item cue = forcing enquiry
+	\end{itemize}
+\end{itemize}
+
+
 \subsubsection{Interference over a 2-level opening}
 \label{sec:intf:2level}
 
@@ -1645,6 +1700,7 @@ A few general principles here:
       \item Relay = some tolerence for the weak options
       \item Enquiries = forcing unless oppo bid
    \end{itemize}
+\newpage
 \item 2x-(2y):
    \begin{itemize}
       \item X = optional (pass if it's your suit, pull otherwise, starts a penalty auction)
@@ -1679,6 +1735,7 @@ are definitely forcing-pass situations:
 \begin{itemize}
 \item After a freely bid game
 \item After 1NT-X and they escape at the two level
+\item If we have shown values for game in the auction so far
 \item ...
 \end{itemize}
 
