--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -59,6 +59,7 @@
 18. & Responses to 2x & \pageref{note:18} \\
 19. & General Swiss & \pageref{note:19} \\
 20. & Suction wriggle & \pageref{note:20} \\
+21. & Aardvark with Halmic redouble & \pageref{note:21} \\
 \end{tabular*}
 
 \newpage
@@ -980,6 +981,8 @@ This defence is played a level higher in the rare case of 2NT being doubled for
 penalties and applies in all cases that a natural notrump bid below game is doubled for
 penalties.
 
+\label{note:21}
+
 After a protective double of 1NT we play Aardvark with a Halmic redouble where
 bids show a two suiter (that suit and a higher) and redouble forces 2C with a
 single-suiter.
@@ -1242,7 +1245,7 @@ Direct 1NT is 15-17 balanced with a stop or semi-balanced and may contain a
 singleton ace~\orange{11N8}, protective 1NT is 11-14 with a stop.  After these
 ``Continuations after 1NT''~\xref{sec:resp:1n} apply, with the exception that
 after the auction (1x)-1N-(2y), 2x is stayman without a stop if available.
-Other bids are lebensohl \label{sec:resp:lebensohl}.
+Other bids are lebensohl \xref{sec:resp:lebensohl}.
 
 Jump overcalls are weak, showing a 6 card suit and between 4HCP (favourable)
 and enough to make a simple overcall. In protective they are intermediate
@@ -1427,7 +1430,7 @@ top tricks, and 2N shows a non-touching two suiter. \orange{11P7}
 
 After a direct penalty double, passes are forcing until we've bid or doubled
 them.  Doubles are for penalties. In passout seat after they have escaped to
-the two level and partner has not bid then Lebensohl \label{sec:resp:lebensohl}
+the two level and partner has not bid then Lebensohl \xref{sec:resp:lebensohl}
 is in effect, eg: (1N)-X-(2x)-P-(P)-2N
 
 \subsubsection{Artificial strong bids}
